<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.henrique.desafio_android.viewmodel.MovimentationDetailViewModel" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/movimentationDetailConstraintLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="@{viewModel.contentVisibility}"
        tools:context=".view.HomeActivity">

        <LinearLayout
            android:id="@+id/movimentationDetailNavbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/movimentation_detail_navbar_icon_description"
                android:onClick="@{() -> viewModel.onBackClick()}"
                app:srcCompat="@drawable/ic_arrow_24" />

        </LinearLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginStart="@dimen/size_spacing_xx_small"
            android:layout_marginEnd="@dimen/size_spacing_xx_small"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/movimentationDetailNavbar">

            <TextView
                android:id="@+id/movimentationDetailTitle"
                style="@style/Title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/movimentation_detail_title"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <View
                android:id="@+id/movimentationDetailView"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="@dimen/size_spacing_x_small"
                android:background="@color/grey"
                app:layout_constraintTop_toBottomOf="@+id/movimentationDetailTitle" />

            <TextView
                android:id="@+id/movimentationDetailTypeTitle"
                style="@style/Body1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/size_spacing_small"
                android:text="@string/movimentation_detail_type_title"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/movimentationDetailView" />

            <TextView
                android:id="@+id/movimentationDetailTypeValue"
                style="@style/Value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/size_spacing_xx_small"
                android:text="@{viewModel.movimentationType}"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/movimentationDetailTypeTitle"
                tools:text="Transferência enviada" />

            <TextView
                android:id="@+id/movimentationDetailAmountTitle"
                style="@style/Body1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/size_spacing_medium"
                android:text="@string/movimentation_detail_amount_title"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/movimentationDetailTypeValue" />

            <TextView
                android:id="@+id/movimentationDetailAmountValue"
                style="@style/Value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/size_spacing_xx_small"
                android:text="@{viewModel.movimentationAmount}"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/movimentationDetailAmountTitle"
                tools:text="R$ 100,00" />

            <TextView
                android:id="@+id/movimentationDetailPersonTitle"
                style="@style/Body1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/size_spacing_medium"
                android:text="@{viewModel.movimentationPersonType}"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/movimentationDetailAmountValue"
                tools:text="Recebedor" />

            <TextView
                android:id="@+id/movimentationDetailPersonValue"
                style="@style/Value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/size_spacing_xx_small"
                android:text="@{viewModel.movimentationPerson}"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/movimentationDetailPersonTitle"
                tools:text="David Bond" />

            <TextView
                android:id="@+id/movimentationDetailBankTitle"
                style="@style/Body1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/size_spacing_medium"
                android:text="@string/movimentation_detail_bank_title"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/movimentationDetailPersonValue" />

            <TextView
                android:id="@+id/movimentationDetailBankValue"
                style="@style/Value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/size_spacing_xx_small"
                android:text="@{viewModel.movimentationBank}"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/movimentationDetailBankTitle"
                tools:text="Banco Phi" />

            <TextView
                android:id="@+id/movimentationDetailDateTitle"
                style="@style/Body1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/size_spacing_medium"
                android:text="@string/movimentation_detail_date_title"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/movimentationDetailBankValue" />

            <TextView
                android:id="@+id/movimentationDetailDateValue"
                style="@style/Value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/size_spacing_xx_small"
                android:text="@{viewModel.movimentationDate}"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/movimentationDetailDateTitle"
                tools:text="13/10/2020 - 15:27:02" />

            <TextView
                android:id="@+id/movimentationDetailAuthenticationTitle"
                style="@style/Body1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/size_spacing_medium"
                android:text="@string/movimentation_detail_authentication_title"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/movimentationDetailDateValue" />

            <TextView
                android:id="@+id/movimentationDetailAuthenticationValue"
                style="@style/Value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/size_spacing_xx_small"
                android:text="@{viewModel.movimentationAuthentication}"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/movimentationDetailAuthenticationTitle"
                tools:text="123445345" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/movimentation_detail_button_text"
                android:textColor="@color/white_smoke"
                app:layout_constraintBottom_toBottomOf="parent"
                android:onClick="@{() -> viewModel.onShareClick()}"
                android:textAllCaps="false"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>